kustomize/base/cerberus-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cerberus
  namespace: default
  labels:
    app: cerberus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cerberus
  template:
    metadata:
      labels:
        app: cerberus
    spec:
      containers:
        - name: cerberus
          image: 'identityorg/cerberus:edge'
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: "/root/config"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      volumes:
        - name: config
          configMap:
            name: cerberus
